# src/tsolvers/linear_model/CMakeLists.txt
# ==============================================================================
# CMakeLists.txt for the linear regression model.
# ==============================================================================

# ==============================================================================
# 1. Append Source Files
# ==============================================================================
add_subdirectory(lars_based)
add_subdirectory(omp_based)
add_subdirectory(afs_based)
# ==============================================================================
